Added base layout for skills section and svg background

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Farsan&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/styles.css">
     <title>Portfolio</title>
 </head>
@@ -557,7 +560,8 @@
     </div>
 
     <div class="content">
-        <h1 class="main-content">Front End Web Developer & UI/UX Designer</h1>
+        <!-- <h1 class="main-content">Front End Web Developer & UI / UX Designer</h1> -->
+        <h1 class="main-content">Full Stack Web Developer</h1>
         <div class="quote-container main-content">
             <div class="avatar"></div>
             <p>ArnauMQ</p>
@@ -565,19 +569,67 @@
         <a href="#" class="cta main-content">Come check my projects!</a>
     </div>
 
+    <section class="skills">
+        <div class="skills-container">
+            <h2 class="headersStyle">My
+                <span> Skills</span>
+            </h2>
+            <div class="skillsGrid">
+                <div>
+                    <i class="fab fa-html5"></i>
+                    <h3>HTML5</h3>
+                    <ul>
+                        <li>Clean and maintainable code</li>
+                        <li>Following the W3C Standards</li>
+                        <li>B.E.M Methodology</li>
+                    </ul>
+                </div>
+                <div>
+                    <i class="fab fa-css3-alt"></i>
+                    <h3>CSS3</h3>
+                    <ul>
+                        <li>Responsive Web Design</li>
+                        <li>Flexbox & CSS Grid</li>
+                        <li>SASS</li>
+                    </ul>
+                </div>
+                <div>
+                    <i class="fab fa-js-square"></i>
+                    <h3>JAVASCRIPT</h3>
+                    <ul>
+                        <li>DOM Manipulation</li>
+                        <li>AJAX & JSON</li>
+                        <li>Jquery</li>
+                    </ul>
+                </div>
+                <div>
+                    <i class="fab fa-vuejs"></i>
+                    <h3>VUE JS</h3>
+                    <ul>
+                        <li>Vue Router</li>
+                        <li>VueX</li>
+                        <li>Vuetify</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- <ol>
+                    <li>Organitzar el html de svgs </li>
+                    <li>Project section html i ideas</li>
+                    <li>Sroll from left i right dels diferents projectes, Scroll animation</li>
+                </ol> -->
+        </div>
+    </section>
+    <section class="projects spacer layer1">
+        <ol>
+            <li>Organitzar el html de svgs </li>
+            <li>Project section html i ideas</li>
+            <li>Sroll from left i right dels diferents projectes, Scroll animation</li>
+        </ol>
+    </section>
+
     <!-- Select two vectors and use union to merge two svg paths into a single one-->
     <!-- Projects start wave -->
-    <svg viewBox="0 0 1440 1136" fill="none" xmlns="http://www.w3.org/2000/svg" class="projectsSectionSvg">
-        <path fill-rule="evenodd" clip-rule="evenodd"
-            d="M60 5.30005L0 0V160V1136H1440V160V32L1380 53.3C1320 75 1200 117 1080 133.3C960 149 840 139 720 117.3C659.999 106.65 599.999 93.3247 539.998 79.9995C479.999 66.6746 419.999 53.3499 360 42.7C251.789 23.1318 143.579 13.0779 79.364 7.11157C72.3682 6.46167 65.8945 5.86011 60 5.30005Z"
-            fill="#0590c7" />
-    </svg>
 
-    <ol>
-        <li>Organitzar el html de svgs </li>
-        <li>Project section html i ideas</li>
-        <li>Sroll from left i right dels diferents projectes, Scroll animation</li>
-    </ol>
     <!--Posibles colores
         #2e2e2e
         #4d4d4d
