Skills layout change and projects section start

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Portfolio</title>
 </head>
@@ -561,17 +564,17 @@
 
     <div class="content">
         <!-- <h1 class="main-content">Front End Web Developer & UI / UX Designer</h1> -->
-        <h1 class="main-content">Full Stack Web Developer</h1>
+        <h1 class="main-content">Full Stack / MERN Stack Web Developer</h1>
         <div class="quote-container main-content">
             <div class="avatar"></div>
-            <p>ArnauMQ</p>
+            <p>Arnau MQ</p>
         </div>
         <a href="#" class="cta main-content">Come check my projects!</a>
     </div>
 
     <section class="skills">
         <div class="skills-container">
-            <h2 class="headersStyle">My
+            <h2 class="header headerStyle">My
                 <span> Skills</span>
             </h2>
             <div class="skillsGrid">
@@ -590,7 +593,7 @@
                     <ul>
                         <li>Responsive Web Design</li>
                         <li>Flexbox & CSS Grid</li>
-                        <li>SASS</li>
+                        <li>SASS / LESS</li>
                     </ul>
                 </div>
                 <div>
@@ -598,8 +601,8 @@
                     <h3>JAVASCRIPT</h3>
                     <ul>
                         <li>DOM Manipulation</li>
-                        <li>AJAX & JSON</li>
-                        <li>Jquery</li>
+                        <li>Fetch API & JSON</li>
+                        <li>Async Await</li>
                     </ul>
                 </div>
                 <div>
@@ -611,6 +614,42 @@
                         <li>Vuetify</li>
                     </ul>
                 </div>
+                <div>
+                    <i class="fab fa-react"></i>
+                    <h3>REACT JS</h3>
+                    <ul>
+                        <li>Redux</li>
+                        <li>Custom Hooks</li>
+                        <li>React Native</li>
+                    </ul>
+                </div>
+                <div>
+                    <i class="fab fa-node-js"></i>
+                    <h3>NODE JS</h3>
+                    <ul>
+                        <li>Express</li>
+                        <li>API REST & JWT</li>
+                        <li>NPM</li>
+                    </ul>
+                </div>
+                <div>
+                    <i class="fa-solid fa-database"></i>
+                    <h3>Mongo DB</h3>
+                    <ul>
+                        <li>Atlas Database</li>
+                        <li>CRUD</li>
+                        <li>Schemas Structure</li>
+                    </ul>
+                </div>
+                <div>
+                    <i class="fab fa-git-alt"></i>
+                    <h3>GIT</h3>
+                    <ul>
+                        <li>Github</li>
+                        <li>Push / Pulls / Merges</li>
+                        <li>Rollbacks</li>
+                    </ul>
+                </div>
             </div>
             <!-- <ol>
                     <li>Organitzar el html de svgs </li>
@@ -619,14 +658,26 @@
                 </ol> -->
         </div>
     </section>
-    <section class="projects spacer layer1">
-        <ol>
-            <li>Organitzar el html de svgs </li>
-            <li>Project section html i ideas</li>
-            <li>Sroll from left i right dels diferents projectes, Scroll animation</li>
-        </ol>
+    <section class="spacer layer1">
+        <div class="projects">
+            <h2 class="header headerStyleInverse">My
+                <span> Projects</span>
+            </h2>
+            <div class="projectsGrid">
+                <div>Landing 1</div>
+                <div>Landing 2</div>
+                <div>MERN (Memories)</div>
+                <div>Champ App</div>
+                <div>Canvas Game</div>
+            </div>
+        </div>
     </section>
 
+    <ol>
+        <li>Organitzar el html de svgs </li>
+        <li>Project section html i ideas</li>
+        <li>Sroll from left i right dels diferents projectes, Scroll animation</li>
+    </ol>
     <!-- Select two vectors and use union to merge two svg paths into a single one-->
     <!-- Projects start wave -->
 
