Changed Skills UI

--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                     <ul>
                         <li>DOM Manipulation</li>
                         <li>Fetch API & JSON</li>
-                        <li>Async Await</li>
+                        <li>Async / Await, Promises, Destructuring </li>
                     </ul>
                 </div>
                 <div>
@@ -651,11 +651,6 @@
                     </ul>
                 </div>
             </div>
-            <!-- <ol>
-                    <li>Organitzar el html de svgs </li>
-                    <li>Project section html i ideas</li>
-                    <li>Sroll from left i right dels diferents projectes, Scroll animation</li>
-                </ol> -->
         </div>
     </section>
     <section class="spacer layer1">
@@ -664,11 +659,18 @@
                 <span> Projects</span>
             </h2>
             <div class="projectsGrid">
-                <div>Landing 1</div>
-                <div>Landing 2</div>
-                <div>MERN (Memories)</div>
-                <div>Champ App</div>
-                <div>Canvas Game</div>
+                <div>MERN (Memories) MERN </div>
+                <div>Champ App React API </div>
+                <div>Landing 1 React Landing </div>
+                <div>NatoursCSS </div>
+                <div>
+                    <div class="projectImage">foto</div>
+                    <div class="projectInfo">
+                        <button> View Project </button>
+                        <button> View Code </button>
+                    </div>
+                </div>
+                <div>Landing 2 React Landing </div>
             </div>
         </div>
     </section>
