Initial Projects grid UI

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
             <div class="avatar"></div>
             <p>Arnau MQ</p>
         </div>
-        <a href="#" class="cta main-content">Come check my projects!</a>
+        <a href="#projectsStart" class="cta main-content">Come check my projects!</a>
     </div>
 
     <section class="skills">
@@ -655,27 +655,96 @@
     </section>
     <section class="spacer layer1">
         <div class="projects">
-            <h2 class="header headerStyleInverse">My
+            <h2 id="projectsStart" class="header headerStyleInverse">My
                 <span> Projects</span>
             </h2>
-            <div class="projectsGrid">
+            <!-- <div class="projectsGrid">
                 <div>MERN (Memories) MERN </div>
                 <div>Champ App React API </div>
                 <div>Landing 1 React Landing </div>
                 <div>NatoursCSS </div>
-                <div>
-                    <div class="projectImage">foto</div>
+                <div class="projectCard">
+                    <div class="projectImage"></div>
                     <div class="projectInfo">
                         <button> View Project </button>
                         <button> View Code </button>
                     </div>
                 </div>
                 <div>Landing 2 React Landing </div>
+            </div> -->
+            <div class="projectsGrid">
+                <div>
+                    <div class="projectsCard-bg"></div>
+                    <div class="projectsCard-links">
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
+                        </div>
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="projectsCard-bg"></div>
+                    <div class="projectsCard-links">
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
+                        </div>
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="projectsCard-bg"></div>
+                    <div class="projectsCard-links">
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
+                        </div>
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="projectsCard-bg"></div>
+                    <div class="projectsCard-links">
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
+                        </div>
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="projectsCard-bg"></div>
+                    <div class="projectsCard-links">
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
+                        </div>
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="projectsCard-bg"></div>
+                    <div class="projectsCard-links">
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
+                        </div>
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
     <ol>
+        <li>Hover on card Project with more project info</li>
         <li>Organitzar el html de svgs </li>
         <li>Project section html i ideas</li>
         <li>Sroll from left i right dels diferents projectes, Scroll animation</li>
