Finished projects grid layout

--- a/index.html
+++ b/index.html
@@ -695,18 +695,7 @@
                         </div>
                     </div>
                 </div>
-                <div>
-                    <div class="projectsCard-bg"></div>
-                    <div class="projectsCard-links">
-                        <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
-                        </div>
-                        <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
-                        </div>
-                    </div>
-                </div>
-                <div>
+                <div class="grid-row-span-2">
                     <div class="projectsCard-bg"></div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
@@ -745,19 +734,13 @@
 
     <ol>
         <li>Hover on card Project with more project info</li>
+        <li>Project Images & Links</li>
+        <li>Contact section</li>
+        <li>Top Sticky Navbar</li>
+        <li>Responsive</li>
         <li>Organitzar el html de svgs </li>
-        <li>Project section html i ideas</li>
         <li>Sroll from left i right dels diferents projectes, Scroll animation</li>
     </ol>
-    <!-- Select two vectors and use union to merge two svg paths into a single one-->
-    <!-- Projects start wave -->
-
-    <!--Posibles colores
-        #2e2e2e
-        #4d4d4d
-
-    -->
-
 
     <!-- Footer wave -->
     <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="projectsSectionSvg">
@@ -770,7 +753,6 @@
         integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="app.js"></script>
-
 </body>
 
 </html>
