--- a/index.html
+++ b/index.html
@@ -675,6 +675,10 @@
             <div class="projectsGrid">
                 <div>
                     <div class="projectsCard-bg"></div>
+                    <div class="hiddenProjectInfo blur">
+                        <h3>Dolor sit amet</h3>
+                        <p>Portfolio project whatever</p>
+                    </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
                             <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
@@ -686,6 +690,10 @@
                 </div>
                 <div>
                     <div class="projectsCard-bg"></div>
+                    <div class="hiddenProjectInfo blur">
+                        <h3>Dolor sit amet</h3>
+                        <p>Portfolio project whatever</p>
+                    </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
                             <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
@@ -697,6 +705,10 @@
                 </div>
                 <div class="grid-row-span-2">
                     <div class="projectsCard-bg"></div>
+                    <div class="hiddenProjectInfo blur">
+                        <h3>Dolor sit amet</h3>
+                        <p>Portfolio project whatever</p>
+                    </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
                             <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
@@ -708,6 +720,10 @@
                 </div>
                 <div>
                     <div class="projectsCard-bg"></div>
+                    <div class="hiddenProjectInfo blur">
+                        <h3>Dolor sit amet</h3>
+                        <p>Portfolio project whatever</p>
+                    </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
                             <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
@@ -719,6 +735,10 @@
                 </div>
                 <div>
                     <div class="projectsCard-bg"></div>
+                    <div class="hiddenProjectInfo blur">
+                        <h3>Dolor sit amet</h3>
+                        <p>Portfolio project whatever</p>
+                    </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
                             <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
