Added project info

--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                     <ul>
                         <li>Redux</li>
                         <li>Custom Hooks</li>
-                        <li>React Native</li>
+                        <li>React Router</li>
                     </ul>
                 </div>
                 <div>
@@ -674,10 +674,10 @@
             </div> -->
             <div class="projectsGrid">
                 <div>
-                    <div class="projectsCard-bg"></div>
+                    <div class="projectsCard-bg projectsCard-bg__1"></div>
                     <div class="hiddenProjectInfo blur">
-                        <h3>Dolor sit amet</h3>
-                        <p>Portfolio project whatever</p>
+                        <h3>Pizza Landing Page</h3>
+                        <p>Fully responsive simple React landing page using styled components and React Scroll</p>
                     </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
@@ -689,25 +689,12 @@
                     </div>
                 </div>
                 <div>
-                    <div class="projectsCard-bg"></div>
+                    <div class="projectsCard-bg projectsCard-bg__2"></div>
                     <div class="hiddenProjectInfo blur">
-                        <h3>Dolor sit amet</h3>
-                        <p>Portfolio project whatever</p>
-                    </div>
-                    <div class="projectsCard-links">
-                        <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
-                        </div>
-                        <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="grid-row-span-2">
-                    <div class="projectsCard-bg"></div>
-                    <div class="hiddenProjectInfo blur">
-                        <h3>Dolor sit amet</h3>
-                        <p>Portfolio project whatever</p>
+                        <h3>Journal App</h3>
+                        <p>Notes React app, using Firebase as Backend, account authentication, Google Sign In, protected
+                            routes and Redux
+                        </p>
                     </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
@@ -719,10 +706,10 @@
                     </div>
                 </div>
                 <div>
-                    <div class="projectsCard-bg"></div>
+                    <div class="projectsCard-bg projectsCard-bg__3"></div>
                     <div class="hiddenProjectInfo blur">
-                        <h3>Dolor sit amet</h3>
-                        <p>Portfolio project whatever</p>
+                        <h3>Dolla Project</h3>
+                        <p>Fully responsive React landing page using styled components, SVGs and Video background</p>
                     </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
@@ -734,10 +721,26 @@
                     </div>
                 </div>
                 <div>
-                    <div class="projectsCard-bg"></div>
+                    <div class="projectsCard-bg projectsCard-bg__4"></div>
                     <div class="hiddenProjectInfo blur">
-                        <h3>Dolor sit amet</h3>
-                        <p>Portfolio project whatever</p>
+                        <h3>League of Legends Champion Searcher</h3>
+                        <p>SPA React project using RIOT API, react-router and custom Hooks</p>
+                    </div>
+                    <div class="projectsCard-links">
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
+                        </div>
+                        <div class="projectsCard-links-btn">
+                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="projectsCard-bg projectsCard-bg__5"></div>
+                    <div class="hiddenProjectInfo blur">
+                        <h3>MERN Project Xperiences</h3>
+                        <p>Full MERN application using Mongo DB, node.js, express for Backend and React with Redux as
+                            Front End </p>
                     </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
