--- a/index.html
+++ b/index.html
@@ -619,8 +619,8 @@
                     <h3>REACT JS</h3>
                     <ul>
                         <li>Redux</li>
-                        <li>Custom Hooks</li>
                         <li>React Router</li>
+                        <li>Custom Hooks</li>
                     </ul>
                 </div>
                 <div>
@@ -755,6 +755,39 @@
         </div>
     </section>
 
+    <section class="spacer layer2">
+        <div class="contactContent">
+            <h2 class="header headerStyle">Contact
+                <span>Me</span>
+            </h2>
+            <div class="contact__socials">
+                <div>
+                    <h3>Want to find out more about me?</h3>
+                    <a href="https://www.linkedin.com/in/arnaumq/" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/Arnau-webDev" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+                <div>
+                    <h3>Have a look at my CV?</h3>
+                    <a href="files/Arnau CV English (1).pdf" target="_blank" download=""><i
+                            class="far fa-file-pdf"></i></a>
+                </div>
+                <div>
+                    <h3>Want to reach out to me?</h3>
+                    <a href="#">
+                        <i class="fas fa-phone"></i> (+34) 622 23 09 11</a>
+                    <a href="mailto:arnauma16@gmail.com">
+                        <i class="fas fa-envelope"></i>arnauma16@gmail.com</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Footer wave -->
     <ol>
         <li>Hover on card Project with more project info</li>
         <li>Project Images & Links</li>
@@ -764,8 +797,6 @@
         <li>Organitzar el html de svgs </li>
         <li>Sroll from left i right dels diferents projectes, Scroll animation</li>
     </ol>
-
-    <!-- Footer wave -->
     <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="projectsSectionSvg">
         <path fill="#0099ff" fill-opacity="1"
             d="M0,160L60,165.3C120,171,240,181,360,202.7C480,224,600,256,720,277.3C840,299,960,309,1080,293.3C1200,277,1320,235,1380,213.3L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
