Responsive minor fixes

--- a/index.html
+++ b/index.html
@@ -658,20 +658,7 @@
             <h2 id="projectsStart" class="header headerStyleInverse">My
                 <span> Projects</span>
             </h2>
-            <!-- <div class="projectsGrid">
-                <div>MERN (Memories) MERN </div>
-                <div>Champ App React API </div>
-                <div>Landing 1 React Landing </div>
-                <div>NatoursCSS </div>
-                <div class="projectCard">
-                    <div class="projectImage"></div>
-                    <div class="projectInfo">
-                        <button> View Project </button>
-                        <button> View Code </button>
-                    </div>
-                </div>
-                <div>Landing 2 React Landing </div>
-            </div> -->
+
             <div class="projectsGrid">
                 <div>
                     <div class="projectsCard-bg projectsCard-bg__1"></div>
@@ -692,7 +679,8 @@
                     <div class="projectsCard-bg projectsCard-bg__2"></div>
                     <div class="hiddenProjectInfo blur">
                         <h3>Journal App</h3>
-                        <p>Notes React app, using Firebase as Backend, account authentication, Google Sign In, protected
+                        <p>Notes React app, using Firebase as Backend, account authentication, Google Sign In,
+                            protected
                             routes and Redux
                         </p>
                     </div>
@@ -709,7 +697,8 @@
                     <div class="projectsCard-bg projectsCard-bg__3"></div>
                     <div class="hiddenProjectInfo blur">
                         <h3>Dolla Project</h3>
-                        <p>Fully responsive React landing page using styled components, SVGs and Video background</p>
+                        <p>Fully responsive React landing page using styled components, SVGs and Video background
+                        </p>
                     </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
@@ -739,7 +728,8 @@
                     <div class="projectsCard-bg projectsCard-bg__5"></div>
                     <div class="hiddenProjectInfo blur">
                         <h3>MERN Project Xperiences</h3>
-                        <p>Full MERN application using Mongo DB, node.js, express for Backend and React with Redux as
+                        <p>Full MERN application using Mongo DB, node.js, express for Backend and React with Redux
+                            as
                             Front End </p>
                     </div>
                     <div class="projectsCard-links">
@@ -763,7 +753,7 @@
             <div class="contact__socials">
                 <div>
                     <h3>Want to find out more about me?</h3>
-                    <a href="https://www.linkedin.com/in/arnaumq/" target="_blank">
+                    <a href="https://breakLink/www.linkedin.com/in/arnaumq/" target="_blank">
                         <i class="fab fa-linkedin"></i>
                     </a>
                     <a href="https://github.com/Arnau-webDev" target="_blank">
@@ -778,9 +768,9 @@
                 <div>
                     <h3>Want to reach out to me?</h3>
                     <a href="#">
-                        <i class="fas fa-phone"></i> (+34) 622 23 09 11</a>
+                        <i class="fas fa-phone"></i> (+34) 622 XX XX XX</a>
                     <a href="mailto:arnauma16@gmail.com">
-                        <i class="fas fa-envelope"></i>arnauma16@gmail.com</a>
+                        <i class="fas fa-envelope"></i>johnDoe@gmail.com</a>
                 </div>
             </div>
         </div>
@@ -788,20 +778,13 @@
 
 
     <!-- Footer wave -->
-    <ol>
-        <li>Hover on card Project with more project info</li>
-        <li>Project Images & Links</li>
-        <li>Contact section</li>
-        <li>Top Sticky Navbar</li>
-        <li>Responsive</li>
-        <li>Organitzar el html de svgs </li>
-        <li>Sroll from left i right dels diferents projectes, Scroll animation</li>
-    </ol>
-    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="projectsSectionSvg">
-        <path fill="#0099ff" fill-opacity="1"
-            d="M0,160L60,165.3C120,171,240,181,360,202.7C480,224,600,256,720,277.3C840,299,960,309,1080,293.3C1200,277,1320,235,1380,213.3L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
-        </path>
-    </svg> -->
+    <!-- <ol>
+            <li>Still left to do</li>
+            <li>Project Images & Links</li>
+            <li>Top Sticky Navbar</li>
+            <li>Organitzar el html de svgs </li>
+            <li>Sroll from left i right dels diferents projectes, Scroll animation</li>
+        </ol> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"
         integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg=="
