Added animation on scroll

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
@@ -572,7 +573,7 @@
         <a href="#projectsStart" class="cta main-content">Come check my projects!</a>
     </div>
 
-    <section class="skills">
+    <section class="skills" data-aos="fade-right" data-aos-anchor-placement="top-center" data-aos-duration="750">
         <div class="skills-container">
             <h2 class="header headerStyle">My
                 <span> Skills</span>
@@ -654,7 +655,7 @@
         </div>
     </section>
     <section class="spacer layer1">
-        <div class="projects">
+        <div class="projects" data-aos="fade-left" data-aos-anchor-placement="top-center" data-aos-duration="750">
             <h2 id="projectsStart" class="header headerStyleInverse">My
                 <span> Projects</span>
             </h2>
@@ -746,7 +747,7 @@
     </section>
 
     <section class="spacer layer2">
-        <div class="contactContent">
+        <div class="contactContent" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="750">
             <h2 class="header headerStyle">Contact
                 <span>Me</span>
             </h2>
@@ -789,6 +790,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"
         integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="app.js"></script>
 </body>
 
