Prevent horizontal scrolling

--- a/index.html
+++ b/index.html
@@ -781,10 +781,10 @@
     <!-- Footer wave -->
     <!-- <ol>
             <li>Still left to do</li>
+            <li>Custom scroll bar & cancel horizontal scroll with JS</li>
             <li>Project Images & Links</li>
-            <li>Top Sticky Navbar</li>
+            <li>Top Sticky Navbar Maybe</li>
             <li>Organitzar el html de svgs </li>
-            <li>Sroll from left i right dels diferents projectes, Scroll animation</li>
         </ol> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"
