Added favicon logo to website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="./img/logoMQ-L.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -21,7 +22,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Portfolio</title>
+    <title>MQ Portfolio</title>
 </head>
 
 <body>
@@ -781,7 +782,7 @@
     <!-- Footer wave -->
     <!-- <ol>
             <li>Still left to do</li>
-            <li>Custom scroll bar & cancel horizontal scroll with JS</li>
+            <li>Cancel horizontal scroll with JS</li>
             <li>Project Images & Links</li>
             <li>Top Sticky Navbar Maybe</li>
             <li>Organitzar el html de svgs </li>
