Added links to projects and code and CV

--- a/index.html
+++ b/index.html
@@ -670,10 +670,12 @@
                     </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
+                            <a href="https://mq-pizzalanding.netlify.app/" target="_blank"> <i
+                                    class="fa-solid fa-link"></i> View App</a>
                         </div>
                         <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
+                            <a href="https://github.com/Arnau-webDev/Pizza-React-LandingPage" target="_blank"> <i
+                                    class="fab fa-github"></i> Check Code</a>
                         </div>
                     </div>
                 </div>
@@ -688,10 +690,12 @@
                     </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
+                            <a href="https://mq-journalapp.netlify.app/" target="_blank"> <i
+                                    class="fa-solid fa-link"></i> View App</a>
                         </div>
                         <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
+                            <a href="https://github.com/Arnau-webDev/JournalAppV2" target="_blank"> <i
+                                    class="fab fa-github"></i> Check Code</a>
                         </div>
                     </div>
                 </div>
@@ -704,10 +708,12 @@
                     </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
+                            <a href="https://mq-dollalanding.netlify.app/" target="_blank"> <i
+                                    class="fa-solid fa-link"></i> View App</a>
                         </div>
                         <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
+                            <a href="https://github.com/Arnau-webDev/dolla-react-website" target="_blank"> <i
+                                    class="fab fa-github"></i> Check Code</a>
                         </div>
                     </div>
                 </div>
@@ -719,10 +725,12 @@
                     </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
+                            <a href="https://mq-lolsearcher.netlify.app/" target="_blank"> <i
+                                    class="fa-solid fa-link"></i> View App</a>
                         </div>
                         <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
+                            <a href="https://github.com/Arnau-webDev/Lol-wiki-champion-searcher" target="_blank"> <i
+                                    class="fab fa-github"></i> Check Code</a>
                         </div>
                     </div>
                 </div>
@@ -736,10 +744,12 @@
                     </div>
                     <div class="projectsCard-links">
                         <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fa-solid fa-link"></i> View App</a>
+                            <a href="https://xperiencesapp.netlify.app/" target="_blank"> <i
+                                    class="fa-solid fa-link"></i> View App</a>
                         </div>
                         <div class="projectsCard-links-btn">
-                            <a href="#" target="_blank"> <i class="fab fa-github"></i> Check Code</a>
+                            <a href="https://github.com/Arnau-webDev/MERN-Memories-App" target="_blank"> <i
+                                    class="fab fa-github"></i> Check Code</a>
                         </div>
                     </div>
                 </div>
@@ -755,7 +765,7 @@
             <div class="contact__socials">
                 <div>
                     <h3>Want to find out more about me?</h3>
-                    <a href="https://breakLink/www.linkedin.com/in/arnaumq/" target="_blank">
+                    <a href="https://www.linkedin.com/in/arnaumq/" target="_blank">
                         <i class="fab fa-linkedin"></i>
                     </a>
                     <a href="https://github.com/Arnau-webDev" target="_blank">
@@ -764,15 +774,15 @@
                 </div>
                 <div>
                     <h3>Have a look at my CV?</h3>
-                    <a href="files/Arnau CV English (1).pdf" target="_blank" download=""><i
+                    <a href="files/Arnau CV English (11).pdf" target="_blank" download=""><i
                             class="far fa-file-pdf"></i></a>
                 </div>
                 <div>
                     <h3>Want to reach out to me?</h3>
                     <a href="#">
-                        <i class="fas fa-phone"></i> (+34) 622 XX XX XX</a>
+                        <i class="fas fa-phone"></i> (+34) 622 23 09 11</a>
                     <a href="mailto:arnauma16@gmail.com">
-                        <i class="fas fa-envelope"></i>johnDoe@gmail.com</a>
+                        <i class="fas fa-envelope"></i>arnauma16@gmail.com</a>
                 </div>
             </div>
         </div>
